unpackaged/main/default/objects/College_Application__c/College_Application__c.object-meta.xml
<CustomObject>
    <label>College Application</label>
    <nameField>
        <label>College Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>College Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>