unpackaged/main/default/objects/College_Application__c/fields/ACT_English_Score__c.field-meta.xml
<CustomField>
    <fullName>ACT_English_Score__c</fullName>
    <label>ACT - English Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>