unpackaged/main/default/objects/College_Application__c/fields/ACT_Scores__c.field-meta.xml
<CustomField>
    <fullName>ACT_Scores__c</fullName>
    <label>ACT Scores</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Upload_Options</valueSetName>
    </valueSet>
</CustomField>