unpackaged/main/default/objects/College_Application__c/fields/Additional_Gender_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Gender_Info__c</fullName>
    <label>Additional Gender Info</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>