unpackaged/main/default/objects/College_Application__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Student Action Needed</fullName>
            </value>
            <value>
                <fullName>Review Complete</fullName>
            </value>
            <value>
                <fullName>Sent to University</fullName>
            </value>
            <value>
                <fullName>Student Applied Pre-Verto</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>