unpackaged/main/default/objects/College_Application__c/fields/Are_you_an_International_Student__c.field-meta.xml
<CustomField>
    <fullName>Are_you_an_International_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are you an International Student?</label>
    <type>Checkbox</type>
</CustomField>