unpackaged/main/default/objects/College_Application__c/fields/Are_you_an_International_Student_formula__c.field-meta.xml
<CustomField>
    <fullName>Are_you_an_International_Student_formula__c</fullName>
    <formula>IF(Are_you_an_International_Student__c, &quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Are you an International Student?</label>
    <type>Text</type>
</CustomField>