unpackaged/main/default/objects/College_Application__c/fields/Biological_Sex__c.field-meta.xml
<CustomField>
    <fullName>Biological_Sex__c</fullName>
    <label>Biological Sex</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Intersex</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>I prefer not to say</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>