unpackaged/main/default/objects/College_Application__c/fields/Box_Id__c.field-meta.xml
<CustomField>
    <fullName>Box_Id__c</fullName>
    <label>Box Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>