unpackaged/main/default/objects/College_Application__c/fields/Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Citizenship__c</fullName>
    <label>Citizenship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>U.S. Citizen or U.S. National</fullName>
            </value>
            <value>
                <fullName>U.S. Dual Citizen</fullName>
            </value>
            <value>
                <fullName>U.S. Permanent Resident</fullName>
            </value>
            <value>
                <fullName>U.S. Refugee or Asylee</fullName>
            </value>
            <value>
                <fullName>Other (non-U.S.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>