unpackaged/main/default/objects/College_Application__c/fields/College_Application_Owner__c.field-meta.xml
<CustomField>
    <fullName>College_Application_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>College Application Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>College_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>