unpackaged/main/default/objects/College_Application__c/fields/Completed_2_years_of_World_Language__c.field-meta.xml
<CustomField>
    <fullName>Completed_2_years_of_World_Language__c</fullName>
    <label>Completed 2 years of World Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>