unpackaged/main/default/objects/College_Application__c/fields/Completed_3_years_of_Science__c.field-meta.xml
<CustomField>
    <fullName>Completed_3_years_of_Science__c</fullName>
    <label>Completed 3 years of Science</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>