unpackaged/main/default/objects/College_Application__c/fields/Completed_4_years_of_English__c.field-meta.xml
<CustomField>
    <fullName>Completed_4_years_of_English__c</fullName>
    <label>Completed 4 years of English</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>