unpackaged/main/default/objects/College_Application__c/fields/Counseling__c.field-meta.xml
<CustomField>
    <fullName>Counseling__c</fullName>
    <label>Counseling</label>
    <referenceTo>Counseling__c</referenceTo>
    <relationshipLabel>College Applications</relationshipLabel>
    <relationshipName>College_Applications</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>