unpackaged/main/default/objects/College_Application__c/fields/County_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>County_of_Residence__c</fullName>
    <label>County of Residence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>