unpackaged/main/default/objects/College_Application__c/fields/Criminal_Convictions__c.field-meta.xml
<CustomField>
    <fullName>Criminal_Convictions__c</fullName>
    <label>Criminal Convictions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>