unpackaged/main/default/objects/College_Application__c/fields/CSS__c.field-meta.xml
<CustomField>
    <fullName>CSS__c</fullName>
    <label>CSS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Communicated</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>