unpackaged/main/default/objects/College_Application__c/fields/Date_Taken_ACT__c.field-meta.xml
<CustomField>
    <fullName>Date_Taken_ACT__c</fullName>
    <label>Date Taken ACT</label>
    <type>Date</type>
</CustomField>