unpackaged/main/default/objects/College_Application__c/fields/Days_Since_Created__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Created__c</fullName>
    <formula>( NOW() - CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Created</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>