unpackaged/main/default/objects/College_Application__c/fields/Days_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Close__c</fullName>
    <formula>IF(ISBLANK(Submitted_To_University_Date_Time__c ), 0,  (Submitted_To_University_Date_Time__c- CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>