unpackaged/main/default/objects/College_Application__c/fields/Days_to_Decision__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Decision__c</fullName>
    <formula>University_Decision_Date__c - DATEVALUE( Submitted_To_University_Date_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Decision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>