unpackaged/main/default/objects/College_Application__c/fields/Decision_Made_By__c.field-meta.xml
<CustomField>
    <fullName>Decision_Made_By__c</fullName>
    <label>University Decision Updated By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>