unpackaged/main/default/objects/College_Application__c/fields/Disciplinary_Violation__c.field-meta.xml
<CustomField>
    <fullName>Disciplinary_Violation__c</fullName>
    <label>Disciplinary Violation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>