unpackaged/main/default/objects/College_Application__c/fields/Dual_Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Dual_Citizenship__c</fullName>
    <label>Dual Citizenship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>