unpackaged/main/default/objects/College_Application__c/fields/Dual_Enrollment_Institution__c.field-meta.xml
<CustomField>
    <fullName>Dual_Enrollment_Institution__c</fullName>
    <label>Dual Enrollment Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>