unpackaged/main/default/objects/College_Application__c/fields/Enrolled_in_IB_Courses_in_HS__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_in_IB_Courses_in_HS__c</fullName>
    <label>Enrolled in IB Courses in HS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>