unpackaged/main/default/objects/College_Application__c/fields/Final_Student_Decision__c.field-meta.xml
<CustomField>
    <fullName>Final_Student_Decision__c</fullName>
    <label>Final Student Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Dismissed/Withdrew</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>