unpackaged/main/default/objects/College_Application__c/fields/First_generation__c.field-meta.xml
<CustomField>
    <fullName>First_generation__c</fullName>
    <label>First generation?</label>
    <type>TextArea</type>
</CustomField>