unpackaged/main/default/objects/College_Application__c/fields/GPA_Flag__c.field-meta.xml
<CustomField>
    <fullName>GPA_Flag__c</fullName>
    <formula>IF( Opportunity__r.z_High_School_GPA__c &lt;  University__r.Minimum_GPA__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GPA Flag</label>
    <type>Checkbox</type>
</CustomField>