unpackaged/main/default/objects/College_Application__c/fields/Have_you_ever_enrolled_in_Dual_Enrollmen__c.field-meta.xml
<CustomField>
    <fullName>Have_you_ever_enrolled_in_Dual_Enrollmen__c</fullName>
    <label>Have you ever enrolled in Dual Enrollmen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>