unpackaged/main/default/objects/College_Application__c/fields/Have_you_previously_attended_college__c.field-meta.xml
<CustomField>
    <fullName>Have_you_previously_attended_college__c</fullName>
    <formula>IF(Have_you_previously_attended_college_or__c, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Have you previously attended college or</label>
    <type>Text</type>
</CustomField>