unpackaged/main/default/objects/College_Application__c/fields/Have_you_previously_attended_college_or__c.field-meta.xml
<CustomField>
    <fullName>Have_you_previously_attended_college_or__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have you previously attended college or</label>
    <type>Checkbox</type>
</CustomField>