unpackaged/main/default/objects/College_Application__c/fields/Have_you_taken_the_ACT__c.field-meta.xml
<CustomField>
    <fullName>Have_you_taken_the_ACT__c</fullName>
    <label>Have you taken the ACT?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>