unpackaged/main/default/objects/College_Application__c/fields/High_School_CEEB_Code__c.field-meta.xml
<CustomField>
    <fullName>High_School_CEEB_Code__c</fullName>
    <label>High School CEEB Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>