unpackaged/main/default/objects/College_Application__c/fields/High_School_GPA__c.field-meta.xml
<CustomField>
    <fullName>High_School_GPA__c</fullName>
    <label>High School GPA</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>