unpackaged/main/default/objects/College_Application__c/fields/Hispanic_or_Latino_a_x__c.field-meta.xml
<CustomField>
    <fullName>Hispanic_or_Latino_a_x__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hispanic or Latino/a/x</label>
    <type>Checkbox</type>
</CustomField>