unpackaged/main/default/objects/College_Application__c/fields/Hispanic_or_Latino_a_x_formula__c.field-meta.xml
<CustomField>
    <fullName>Hispanic_or_Latino_a_x_formula__c</fullName>
    <formula>IF(Hispanic_or_Latino_a_x__c, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hispanic or Latino/a/x</label>
    <type>Text</type>
</CustomField>