unpackaged/main/default/objects/College_Application__c/fields/Hobbies__c.field-meta.xml
<CustomField>
    <fullName>Hobbies__c</fullName>
    <label>Hobbies</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>