unpackaged/main/default/objects/College_Application__c/fields/Identity__c.field-meta.xml
<CustomField>
    <fullName>Identity__c</fullName>
    <label>Identity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>