unpackaged/main/default/objects/College_Application__c/fields/Major_of_Interest_2__c.field-meta.xml
<CustomField>
    <fullName>Major_of_Interest_2__c</fullName>
    <label>Major of Interest 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>College_Major_Options</valueSetName>
    </valueSet>
</CustomField>