unpackaged/main/default/objects/College_Application__c/fields/Number_of_Verto_Semesters__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Verto_Semesters__c</fullName>
    <label>Number of Verto Semesters</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Semester Only</fullName>
            </value>
            <value>
                <fullName>2 Semesters (full academic year)</fullName>
            </value>
            <value>
                <fullName>3 Semesters</fullName>
            </value>
            <value>
                <fullName>4 Semesters</fullName>
            </value>
            <value>
                <fullName>Not sure yet.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>