unpackaged/main/default/objects/College_Application__c/fields/Official_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Official_Transcript__c</fullName>
    <label>Official Transcript</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Uploaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>