unpackaged/main/default/objects/College_Application__c/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <label>On Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Research/Decision making</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Verto Grades</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Non-partner decisions</fullName>
            </value>
            <value>
                <fullName>Partner Application Not Yet Open</fullName>
            </value>
            <value>
                <fullName>Partner Onboarding</fullName>
            </value>
            <value>
                <fullName>Gap Year</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
            <value>
                <fullName>Parter Application Not Yet Open</fullName>
                <isActive>false</isActive>
                <label>Parter Application Not Yet Open</label>
            </value>
            <value>
                <fullName>Parter Onboarding</fullName>
                <isActive>false</isActive>
                <label>Parter Onboarding</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>