unpackaged/main/default/objects/College_Application__c/fields/Other_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Other_Requirements__c</fullName>
    <label>Other Requirements</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>