unpackaged/main/default/objects/College_Application__c/fields/Parent_1_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_1_First_Name__c</fullName>
    <label>Parent 1 First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>