unpackaged/main/default/objects/College_Application__c/fields/Parent_2_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_2_Last_Name__c</fullName>
    <label>Parent 2 Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>