unpackaged/main/default/objects/College_Application__c/fields/Parent_2_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_2_Phone_Number__c</fullName>
    <label>Parent 2 Phone Number</label>
    <type>Phone</type>
</CustomField>