unpackaged/main/default/objects/College_Application__c/fields/Parents_Highest_Degree_Earned__c.field-meta.xml
<CustomField>
    <fullName>Parents_Highest_Degree_Earned__c</fullName>
    <label>Parents Highest Degree Earned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Did Not Graduate High School</fullName>
            </value>
            <value>
                <fullName>High School Diploma</fullName>
            </value>
            <value>
                <fullName>GED</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>Associate&#39;s Degree</fullName>
            </value>
            <value>
                <fullName>Bachelor&#39;s Degree</fullName>
            </value>
            <value>
                <fullName>Master&#39;s Degree or Doctoral Degree</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>