unpackaged/main/default/objects/College_Application__c/fields/Parents_Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>Parents_Marital_Status__c</fullName>
    <label>Parents Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Separated</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Never Married</fullName>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
            <value>
                <fullName>Civil Union/ Domestic Partners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>